[package]
name = "urlpushclient"
version = "0.1.0"
edition = "2021"

[profile.release]
strip="debuginfo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde_json = "1.0.96"
url = "2.3.1"
webbrowser = "0.8.10"
